Bug 255828 - AX: WebKit computes the wrong accessibility clickpoint for display:contents links and headings
Summary: AX: WebKit computes the wrong accessibility clickpoint for display:contents l...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tyler Wilcock
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-22 10:34 PDT by Tyler Wilcock
Modified: 2023-04-22 17:33 PDT (History)
10 users (show)

See Also:


Attachments
Patch (21.00 KB, patch)
2023-04-22 10:40 PDT, Tyler Wilcock
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Wilcock 2023-04-22 10:34:58 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-04-22 10:35:13 PDT
<rdar://problem/108409898>
Comment 2 Tyler Wilcock 2023-04-22 10:40:48 PDT
Created attachment 466045 [details]
Patch
Comment 3 EWS 2023-04-22 17:33:20 PDT
Committed 263287@main (791a382d9c34): <https://commits.webkit.org/263287@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 466045 [details].