AX: WebKit computes the wrong accessibility clickpoint for display:contents links and headings https://bugs.webkit.org/show_bug.cgi?id=255828 rdar://problem/108409898

Reviewed by Chris Fleizach.

AccessibilityRenderObject had special logic for computing click points
for headings and links and there is no reason this logic is specific to
an AX object with a renderer. To fix this, these implementations were
moved to AccessibilityObject. Other functions called from these click
point methods were moved, too.

* LayoutTests/accessibility/mac/heading-clickpoint-expected.txt:
* LayoutTests/accessibility/mac/heading-clickpoint.html:
Add display:contents testcase.

* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::selection const):
(WebCore::boundsForRects):
(WebCore::AccessibilityRenderObject::boundsForVisiblePositionRange const):
(WebCore::AccessibilityObject::boundsForRange const):
(WebCore::AccessibilityObject::linkClickPoint):
(WebCore::AccessibilityObject::clickPoint):
(WebCore::AccessibilityObject::clickPointFromElementRect const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::linkClickPoint): Deleted.
(WebCore::AccessibilityRenderObject::clickPoint): Deleted.
(WebCore::AccessibilityRenderObject::selection const): Deleted.
(WebCore::boundsForRects): Deleted.
(WebCore::AccessibilityRenderObject::boundsForVisiblePositionRange const): Deleted.
(WebCore::AccessibilityRenderObject::boundsForRange const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:

Canonical link: https://commits.webkit.org/263287@main